# tacco

./: .git-hooks-pre-commit  .gitignore  LICENCE.txt  NOTICE.md  README.md  api.html  environment.yml  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  references.html  release_notes.html  search.html  searchindex.js  setup.cfg
.github/workflows/: build-sphinx.yml
_autosummary/: tacco.benchmarking.benchmark_annotate.html  tacco.benchmarking.benchmark_script.html  tacco.benchmarking.benchmark_shell.html  tacco.benchmarking.html  tacco.eval.compute_err.html  tacco.eval.html  tacco.eval.score_error.compute_err.html  tacco.eval.score_error.corr.html  tacco.eval.score_error.html  tacco.eval.score_error.lp_err.html  tacco.eval.score_error.max_correct.html  tacco.eval.score_error.proj_err.html  tacco.get.counts.html  tacco.get.data_from_key.html  tacco.get.html  tacco.get.positions.html  tacco.html  tacco.plots.annotated_heatmap.html  tacco.plots.annotation_coordinate.html  tacco.plots.cellsize.html  tacco.plots.co_occurrence.html  tacco.plots.co_occurrence_matrix.html  tacco.plots.comparison.html  tacco.plots.compositions.html  tacco.plots.contribution.html  tacco.plots.dotplot.html  tacco.plots.dr_split.html  tacco.plots.frequency.html  tacco.plots.frequency_bar.html  tacco.plots.frequency_line.html  tacco.plots.get_default_colors.html  tacco.plots.heatmap.html  tacco.plots.html  tacco.plots.mix_base_colors.html  tacco.plots.scatter.html  tacco.plots.scatter_matrix.html  tacco.plots.sigmap.html  tacco.plots.significances.html  tacco.plots.subplots.html  tacco.plots.umap_split.html  (+211 more)
_modules/: index.html
_sources/: examples.rst.txt  index.rst.txt  references.rst.txt  release_notes.rst.txt
_sources/_autosummary/: tacco.benchmarking.benchmark_annotate.rst.txt  tacco.benchmarking.benchmark_script.rst.txt  tacco.benchmarking.benchmark_shell.rst.txt  tacco.benchmarking.rst.txt  tacco.eval.compute_err.rst.txt  tacco.eval.rst.txt  tacco.eval.score_error.compute_err.rst.txt  tacco.eval.score_error.corr.rst.txt  tacco.eval.score_error.lp_err.rst.txt  tacco.eval.score_error.max_correct.rst.txt  tacco.eval.score_error.proj_err.rst.txt  tacco.eval.score_error.rst.txt  tacco.get.counts.rst.txt  tacco.get.data_from_key.rst.txt  tacco.get.positions.rst.txt  tacco.get.rst.txt  tacco.plots.annotated_heatmap.rst.txt  tacco.plots.annotation_coordinate.rst.txt  tacco.plots.cellsize.rst.txt  tacco.plots.co_occurrence.rst.txt  tacco.plots.co_occurrence_matrix.rst.txt  tacco.plots.comparison.rst.txt  tacco.plots.compositions.rst.txt  tacco.plots.contribution.rst.txt  tacco.plots.dotplot.rst.txt  tacco.plots.dr_split.rst.txt  tacco.plots.frequency.rst.txt  tacco.plots.frequency_bar.rst.txt  tacco.plots.frequency_line.rst.txt  tacco.plots.get_default_colors.rst.txt  tacco.plots.heatmap.rst.txt  tacco.plots.mix_base_colors.rst.txt  tacco.plots.rst.txt  tacco.plots.scatter.rst.txt  tacco.plots.scatter_matrix.rst.txt  tacco.plots.sigmap.rst.txt  tacco.plots.significances.rst.txt  tacco.plots.subplots.rst.txt  tacco.plots.umap_split.rst.txt  tacco.preprocessing.apply_random_platform_effect.rst.txt  (+211 more)
_sources/notebooks/: benchmarking.ipynb.txt  object_splitting.ipynb.txt  overview.ipynb.txt  parameter_variations.ipynb.txt  simulated_ambient.ipynb.txt
_sources/release_notes/: release_notes_0.3.0.rst.txt  release_notes_0.4.0.rst.txt  release_notes_0.5.0.rst.txt  template_release_notes.rst.txt
_static/: notebook_hacks.css
docs/: Makefile  conf.py  index.rst  references.rst
docsource/: Makefile  api.rst  cleanup_notebooks.py  conf.py  download_notebooks.py  index.rst  references.rst
docsource/_static/: readthedocs-custom.css
docsource/_templates/: custom-module-template.rst
docsource/release_notes/: release_notes_0.3.0.rst  template_release_notes.rst
notebooks/: benchmarking.html  cooccurrence.html  insilico_mouse_colon.html  insilico_mouse_colon.ipynb  mapping_single_cells_into_space.html  object_splitting.html  osmFISH_single_molecule_annotation.html  overview.html  overview.ipynb  parameter_variations.html  simulated_ambient.html  simulated_dropout.html  simulated_dropout.ipynb  single_cell_differentiation.html  single_cell_differentiation.ipynb  slideseq_mouse_colon.html  slideseq_mouse_colon.ipynb  slideseq_mouse_olfactory_bulb.html  slideseq_mouse_olfactory_bulb_single.html  slideseq_mouse_olfactory_bulb_single.ipynb  visium_mouse_kidney.html
release_notes/: release_notes_0.3.0.html  release_notes_0.4.0.html  release_notes_0.5.0.html  template_release_notes.html
tacco/: __init__.py
tacco/benchmarking/: __init__.py  _benchmarking.py
tacco/eval/: __init__.py  score_error.py
tacco/get/: __init__.py  _counts.py  _data.py  _positions.py
tacco/plots/: __init__.py  _plots.py
tacco/preprocessing/: __init__.py  _create_reference.py  _platform.py  _qc.py  _reference.py  _refine_reference.py
tacco/testing/: __init__.py  _assert.py  _freeze.py
tacco/tools/: RCTD.R  SingleR.R  _NMFreg.py  _OT.py  _RCTD.py  _SingleR.py  __init__.py  _annotate.py  _co_occurrence.py  (+14 more)
tests/: test_annotation.py  test_co_occurrence.py  test_distances.py  test_enrichments.py  test_get.py  test_math.py  test_mix_in_silico.py  test_orthology.py  test_platform.py  test_points.py  test_regions.py  test_spatial_split.py  test_split.py  test_testing.py  test_utils.py
(+49 files in other folders)
