[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tacco"
description = "TACCO: Transfer of Annotations to Cells and their COmbinations"
authors = [
    {name = "Simon Mages"},
    {name = "Noa Moriel"},
    {name = "Jan Watter"},
]
maintainers = [
    {name = "Jan Watter"},
    {name = "Simon Mages"},
]
readme = "README.md"
license = {file = "LICENCE.txt"}
requires-python = ">=3.7"

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dynamic = ["version"]

dependencies = [
 'requests',
 'joblib',
 'numba>=0.51.2',
 'numpy',
 'matplotlib!=3.7',
 'seaborn',
 'scanpy>=1.7.0',
 'statsmodels',
 'anndata>=0.9.0',
 'pandas>=1.1.0',
 'scipy>=1.6.0',
 'scikit_learn',
 'threadpoolctl',
 'pyamg',
 'sparse_dot_mkl>=0.7.3; platform_machine == "x86_64"',
 'mkl; platform_machine == "x86_64"',
 'mkl_service; platform_machine == "x86_64"',
]

[project.urls]
Source = "https://github.com/simonwm/tacco"
Documentation = "https://simonwm.github.io/tacco/index.html"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.optional-dependencies]
doc = [
  "tacco",
  "sphinx",
  "sphinx-rtd-theme",
  "pydata-sphinx-theme",
  "sphinx-autodoc-typehints",
  "nbsphinx",
  "ipython",
  "jupytext",
  "jupyter",
]

benchmark = ["time"]

test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["tacco"]
