[metadata]
name = tacco
description = "TACCO: Transfer of Annotations to Cells and their COmbinations"
#url = "https://github.com/simonwm/tacco"
author = "Simon Mages"
author_email = "smages@broadinstitute.org"

[options]
packages = find:
install_requires =
    requests
    importlib; python_version == "2.6"
    joblib
    numba>=0.51.2
    numpy
    matplotlib!=3.7.0
    seaborn
    sparse_dot_mkl>=0.7.3
    scanpy>=1.7.0
    statsmodels
    anndata
    pandas>=1.1.0
    scipy>=1.6.0
    mkl
    mkl_service
    scikit_learn
    threadpoolctl
    pyamg

[options.extras_require]
tests =
    pytest
docs =
    sphinx
    sphinx-rtd-theme
    pydata-sphinx-theme
    sphinx-autodoc-typehints
    nbsphinx
    ipython
    jupytext
    jupyter
